@@ -1116,3 +1116,8 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
       (Thanks to Peter Antoniac)
     * SVN 350: fixed missing dc1394_capture_enqueue() in grab_partial_image.c
       (Thanks to Damien Delannay)
+	
+2007-01-20 Damien Douxchamps<ddouxchamps@users.sf.net>
+    * SVN 351: remove save_channel and load_channel from the dc1394camera_t
+      structure. Also remove the functions dc1394_memory_get_save/load_ch()
+      from the API.
